--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "jonston/privatbank.vl-pg-sdk",
   "description": "privatbank.lv payment gateway API library",
   "version": "1.0.0",
+  "minimum-stability": "dev",
   "license": "MIT",
   "authors": [
     {
