set minimum stability to stable

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "jonston/privatbank.vl-pg-sdk",
   "description": "privatbank.lv payment gateway API library",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
     {
